fixed ENS avatar & word wrap css

--- a/packages/messenger-widget/src/components/About/About.css
+++ b/packages/messenger-widget/src/components/About/About.css
@@ -30,7 +30,8 @@
 @media only screen and (max-width: 650px) {
 
     .about-description {
-        word-break: break-all;
+        word-break: break-word;
+        hyphens: auto;
         width: fit-content;
     }
 
