--- a/packages/messenger-widget/src/components/Message/Message.css
+++ b/packages/messenger-widget/src/components/Message/Message.css
@@ -3,7 +3,8 @@
     max-width: 38rem;
     margin-right: 0.4rem;
     font-size: 14px;
-    word-break: break-all;
+    word-break: break-word;
+    hyphens: auto;
 }
 
 .action-container {
