--- a/packages/messenger-widget/src/styles/common.css
+++ b/packages/messenger-widget/src/styles/common.css
@@ -231,8 +231,9 @@ input:focus {
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        word-break: break-all;
+        word-break: break-word;
         font-size: 0.56rem;
+        hyphens: auto;
     }
 
     .profile-configuration-box {
