--- a/packages/messenger-widget/src/styles/profile-contact.css
+++ b/packages/messenger-widget/src/styles/profile-contact.css
@@ -143,7 +143,8 @@
     }
 
     .ens-details {
-        word-break: break-all;
+        word-break: break-word;
+        hyphens: auto;
     }
 
     .profile-details-container {
